test/events/invalidValues/execute.js
export const eventHandler = {
    name: "validName",
    isOnce: false,
    execute: 1,
};
